<resources>
    <string name="app_name">MusicalApp</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlist">Playlists</string>
    <string name="songImgDesc">this is an image</string>
    <string name="albumImgDesc">this is an album</string>
    <string name="artistImgDesc">this is an artist</string>
    <string name="songtitle">SongTitle</string>
    <string name="albumtitle">AlbumTitle</string>
    <string name="artistName">ArtistName</string>
    <string name="artist">Artist</string>
    <string name="songduration">3:25</string>
    <string name="albumduration">53:12</string>
    <string name="ordinarylove">Ordinary Love</string>
    <string name="u2">U2</string>
    <string name="thingswedoforlove">Things We Do For Love</string>
    <string name="lydmor">Lydmor and Bon Homme</string>
    <string name="explsongsactivity">The top of the screen is occupied by the song playing right now and the player buttons. Android MediaPlayer class can be used. Below is a list with the rest of the songs implemented with an ArrayList hosting song objects and ArrayAdapter. Pressing the three vertical dot icon a new submenu opens with actions on the current object</string>
    <string name="explartistsActivity">The top of the screen is occupied by the artist songs playing right now and the player buttons. Android MediaPlayer class can be used. Below is a list with the rest of the songs categorized by artist in an horizontal scrollview. Pressing the three vertical dot icon a new submenu opens with actions on the current object. Maybe a database based implementation is more suitable for this kind of application</string>
    <string name="explmainactivity">This is the main menu activity. Please press any of the above TextViews - buttons. Each one leads to a different activity</string>
    <string name="expplaylistactivity">The top of the screen is occupied by the playlist is playing right now and the player buttons. Android MediaPlayer class can be used. Below is a list with the rest of the playlists implemented with an ArrayList hosting playlist objects and ArrayAdapter. Pressing the three vertical dot icon a new submenu opens with actions on the current object</string>
    <string name="explalbumactivity">The top of the screen is occupied by the album playing right now and the player buttons. Android MediaPlayer class can be used. Below is a list with the rest of the albums categorized by genre of music and aligned in an horizontal scrollview. There is an ArrayList with Album objects and an ArrayAdapter. Pressing the three vertical dot icon a new submenu opens with actions on the current album playing</string>
    <string name="explsubmenu">Actions can be applied to the object selected. Buttons do not function</string>
    <string name="playListTitle">PlaylistTitle</string>
    <string name="playListDuration">01:43:57</string>
    <string name="myRockPlaylist">My Rock Playlist</string>
    <string name="playListDurationViewList">02:11:51</string>
    <string name="playListDurationViewList2">03:24:07</string>
    <string name="myPopPlaylist">My Pop Playlist</string>
    <string name="popmusic">POP</string>
    <string name="rockmusic">ROCK</string>
    <string name="classicmusic">CLASSIC</string>
    <string name="coldplay">Coldplay</string>
    <string name="previous">previous</string>
    <string name="play">play</string>
    <string name="next">next</string>
    <string name="album1">album1</string>
    <string name="album2">album2</string>
    <string name="album3">album3</string>
    <string name="album4">album4</string>
    <string name="album5">album5</string>
    <string name="album6">album6</string>
    <string name="album7">album7</string>
    <string name="album8">album8</string>
    <string name="album9">album9</string>
    <string name="album10">album10</string>
    <string name="album11">album11</string>
    <string name="album12">album12</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="share">share</string>
    <string name="set_as_ringtone">set as ringtone</string>
</resources>
