<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    tools:context="com.example.android.musicalapp.ArtistsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/artistsBackground">

        <!-- Artist picture with artist info-->
        <ImageView
            android:id="@+id/artistPhotoView"
            style="@style/playerPhoto"
            android:contentDescription="@string/artistImgDesc"
            android:src="@drawable/coldplay" />

        <TextView
            android:id="@+id/artistNameView"
            style="@style/textViewsOnplayerPhoto"
            android:layout_margin="@dimen/margin16dp"
            android:background="@color/titleBGcolor"
            android:text="@string/artistName"
            android:textSize="@dimen/textsize30" />


        <ImageView
            android:id="@+id/moreButton"
            style="@style/moreButtonStyle"
            android:layout_margin="@dimen/margin16dp"
            android:src="@drawable/ic_more_vert_white_36dp" />

        <!-- player buttons-->
        <LinearLayout
            android:id="@+id/player"
            style="@style/playerLayout"
            android:layout_marginTop="155dp"
            android:background="@color/playerTransBackground">

            <ImageView
                style="@style/playerButtons"
                android:contentDescription="@string/previous"
                android:src="@drawable/ic_skip_previous_white_48dp" />

            <ImageView
                style="@style/playerButtons.Play"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_play_circle_filled_white_48dp" />

            <ImageView
                style="@style/playerButtons"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_skip_next_white_48dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/player"
            android:orientation="vertical">

            <!-- artist albums in horizontal scroll view 1 -->
            <TextView
                style="@style/textViewsOnplayerPhoto"
                android:background="@color/artistBGcolor"
                android:text="@string/u2" />

            <HorizontalScrollView style="@style/horizontalScroll">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/album_1"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album1"
                        android:src="@drawable/coldplay" />

                    <ImageView
                        android:id="@+id/album_2"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album2"
                        android:src="@drawable/lydmor" />

                    <ImageView
                        android:id="@+id/album_3"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album3"
                        android:src="@drawable/u2" />

                    <ImageView
                        android:id="@+id/album_4"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album4"
                        android:src="@drawable/lydmor" />

                </LinearLayout>

            </HorizontalScrollView>

            <!-- artist albumss in horizontal scroll view 2 -->
            <TextView
                style="@style/textViewsOnplayerPhoto"
                android:background="@color/artistBGcolor"
                android:text="@string/lydmor" />

            <HorizontalScrollView style="@style/horizontalScroll">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/album_5"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album5"
                        android:src="@drawable/lydmor" />

                    <ImageView
                        android:id="@+id/album_6"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album6"
                        android:src="@drawable/coldplay" />

                    <ImageView
                        android:id="@+id/album_7"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album7"
                        android:src="@drawable/u2" />

                    <ImageView
                        android:id="@+id/album_8"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album8"
                        android:src="@drawable/lydmor" />

                </LinearLayout>

            </HorizontalScrollView>

            <!-- artist albums in horizontal scroll view 3 -->
            <TextView
                style="@style/textViewsOnplayerPhoto"
                android:background="@color/artistBGcolor"
                android:text="@string/coldplay" />

            <HorizontalScrollView style="@style/horizontalScroll">

                <LinearLayout
                    android:id="@+id/classicSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/album_9"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album9"
                        android:src="@drawable/u2" />

                    <ImageView
                        android:id="@+id/album_10"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album10"
                        android:src="@drawable/lydmor" />

                    <ImageView
                        android:id="@+id/album_11"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album11"
                        android:src="@drawable/coldplay" />

                    <ImageView
                        android:id="@+id/album_12"
                        style="@style/album_cover_image"
                        android:contentDescription="@string/album12"
                        android:src="@drawable/lydmor" />

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                style="@style/explanationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/classicSection"
                android:text="@string/explartistsActivity" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>

