<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <!-- buttons for submenu-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_margin="@dimen/margin16dp"
        android:textColor="@color/explanationTextColor"
        android:background="@color/songsBackground"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_margin="@dimen/margin16dp"
        android:textColor="@color/explanationTextColor"
        android:background="@color/artistsBackground"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_margin="@dimen/margin16dp"
        android:textColor="@color/explanationTextColor"
        android:background="@color/albumsBackground"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_as_ringtone"
        android:layout_margin="@dimen/margin16dp"
        android:textColor="@color/explanationTextColor"
        android:background="@color/playlistsBackground"/>

    <TextView
        style="@style/explanationTextView"
        android:text="@string/explsubmenu" />


</LinearLayout>