<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/songsBackground"
        tools:context="com.example.android.musicalapp.SongsActivity">

        <!--the upper section with song image and song info  -->
        <ImageView
            android:id="@+id/songPhotoView"
            style="@style/playerPhoto"
            android:contentDescription="@string/songImgDesc"
            android:src="@drawable/u2" />

        <TextView
            android:id="@+id/songTitleView"
            style="@style/textViewsOnplayerPhoto"
            android:layout_margin="@dimen/margin16dp"
            android:background="@color/titleBGcolor"
            android:text="@string/songtitle"
            android:textSize="@dimen/textsize30" />

        <TextView
            android:id="@+id/artistView"
            style="@style/textViewsOnplayerPhoto"
            android:layout_alignLeft="@+id/songTitleView"
            android:layout_below="@+id/songTitleView"
            android:background="@color/artistBGcolor"
            android:text="@string/artist"
            android:textSize="@dimen/textsize18" />

        <TextView
            android:id="@+id/durationView"
            style="@style/textViewsOnplayerPhoto"
            android:layout_below="@id/artistView"
            android:layout_margin="@dimen/margin16dp"
            android:text="@string/songduration"
            android:textSize="@dimen/textsize30" />

        <ImageView
            android:id="@+id/moreButton"
            style="@style/moreButtonStyle"
            android:layout_margin="@dimen/margin16dp"
            android:src="@drawable/ic_more_vert_white_36dp" />

        <!--the player buttons  -->
        <LinearLayout
            android:id="@+id/player"
            style="@style/playerLayout"
            android:layout_marginTop="155dp"
            android:background="@color/playerTransBackground">

            <ImageView
                style="@style/playerButtons"
                android:contentDescription="@string/previous"
                android:src="@drawable/ic_skip_previous_white_48dp" />

            <ImageView
                style="@style/playerButtons.Play"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_play_circle_filled_white_48dp" />

            <ImageView
                style="@style/playerButtons"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_skip_next_white_48dp" />
        </LinearLayout>

        <!--the list with more songs below player buttons -->
        <!--the list item1 -->
        <LinearLayout
            android:id="@+id/listItem"
            style="@style/listItemStyle"
            android:layout_below="@+id/player"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photoViewList"
                style="@style/photoViewListStyle"
                android:contentDescription="@string/songImgDesc"
                android:src="@drawable/u2" />

            <LinearLayout
                android:id="@+id/songDetails"
                style="@style/songDetailsStyle">

                <TextView
                    android:id="@+id/songTitleViewList"
                    style="@style/TextViewsInSongDetailsStyle"
                    android:layout_marginTop="@dimen/marginTop10dp"
                    android:text="@string/ordinarylove"
                    android:textSize="@dimen/textsize18" />

                <TextView
                    android:id="@+id/artistViewList"
                    style="@style/TextViewsInSongDetailsStyle"
                    android:layout_marginTop="@dimen/marginTop12dp"
                    android:text="@string/u2"
                    android:textSize="@dimen/textsize14" />
            </LinearLayout>

            <ImageView
                android:id="@+id/moreBtnViewList"
                style="@style/moreBtnViewListStyle" />

        </LinearLayout>

        <!--the list item2 -->
        <LinearLayout
            android:id="@+id/listItem2"
            style="@style/listItemStyle"
            android:layout_below="@+id/listItem"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photoViewList2"
                style="@style/photoViewListStyle"
                android:contentDescription="@string/songImgDesc"
                android:src="@drawable/lydmor" />

            <LinearLayout
                android:id="@+id/songDetails2"
                style="@style/songDetailsStyle">

                <TextView
                    android:id="@+id/songTitleViewList2"
                    style="@style/TextViewsInSongDetailsStyle"
                    android:layout_marginTop="@dimen/marginTop10dp"
                    android:text="@string/thingswedoforlove"
                    android:textSize="@dimen/textsize18" />

                <TextView
                    android:id="@+id/artistViewList2"
                    style="@style/TextViewsInSongDetailsStyle"
                    android:layout_marginTop="@dimen/marginTop12dp"
                    android:text="@string/lydmor"
                    android:textSize="@dimen/textsize14" />
            </LinearLayout>

            <ImageView
                android:id="@+id/moreBtnViewList2"
                style="@style/moreBtnViewListStyle" />

        </LinearLayout>

        <TextView
            style="@style/explanationTextView"
            android:layout_below="@id/listItem2"
            android:text="@string/explsongsactivity" />

    </RelativeLayout>

</ScrollView>






